--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatgpt",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "ChatGPT via command line terminal",
   "type": "module",
   "main": "script.js",
@@ -8,7 +8,7 @@
     "start": "node script.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "David Brandon",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
